force-app/main/default/objects/MaskSObject__c/MaskSObject__c.object-meta.xml
<CustomObject>
    <description>Contains information about the sobject to mask</description>
    <label>Mask SObject</label>
    <nameField>
        <label>Mask SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mask SObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>