force-app/main/default/objects/MaskSObject__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>API Name of the SObject to mask</description>
    <label>API Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>