force-app/main/default/objects/MaskSObject__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <description>Scope size</description>
    <inlineHelpText>The optimal scope size is a factor of 2000, for example, 100, 200, 400 and so on.</inlineHelpText>
    <label>Batch size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>