force-app/main/default/objects/MaskSObject__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration between last start and last end execution</description>
    <formula>IF(
  LastEnd__c - LastStart__c &gt; 0 ,
  TEXT( FLOOR( LastEnd__c - LastStart__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (LastEnd__c - LastStart__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (LastEnd__c - LastStart__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in hours</label>
    <type>Text</type>
</CustomField>