force-app/main/default/objects/MaskSObject__c/fields/JobItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>JobItemsProcessed__c</fullName>
    <description>Total number of batches processed</description>
    <label>Job Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>