force-app/main/default/objects/MaskSObject__c/fields/LastBulkJobId__c.field-meta.xml
<CustomField>
    <fullName>LastBulkJobId__c</fullName>
    <description>Last Bulk job Id</description>
    <label>Last Bulk Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>