force-app/main/default/objects/MaskSObject__c/fields/LastEnd__c.field-meta.xml
<CustomField>
    <fullName>LastEnd__c</fullName>
    <description>Store the date when the last execution ended</description>
    <label>Last End</label>
    <type>DateTime</type>
</CustomField>