force-app/main/default/objects/MaskSObject__c/fields/LastJobId__c.field-meta.xml
<CustomField>
    <fullName>LastJobId__c</fullName>
    <description>Last execution job Id</description>
    <label>Last Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>