force-app/main/default/objects/MaskSObject__c/fields/LastStart__c.field-meta.xml
<CustomField>
    <fullName>LastStart__c</fullName>
    <description>Store the date when the last execution started</description>
    <label>Last Start</label>
    <type>DateTime</type>
</CustomField>