force-app/main/default/objects/MaskSObject__c/fields/TotalJobItems__c.field-meta.xml
<CustomField>
    <fullName>TotalJobItems__c</fullName>
    <description>Total number of batches to process</description>
    <label>Total Job Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>