force-app/main/default/objects/MaskSObject__c/fields/WhereClause__c.field-meta.xml
<CustomField>
    <fullName>WhereClause__c</fullName>
    <description>Restrict the SObject query by adding a WHERE clause</description>
    <label>Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>