force-app/main/default/objects/MaskSObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sequence__c</columns>
    <columns>Name__c</columns>
    <columns>APIName__c</columns>
    <columns>Batch_size__c</columns>
    <columns>WhereClause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>